{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 0,
  "lineage": "889bae50-fd8d-c2bc-5492-bf5f72197683",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jobpay01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:281557493350:instance/i-08edeae151f1f4997",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08edeae151f1f4997",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tanamao",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08aa7fb6da55a93c3",
            "private_dns": "ip-172-31-81-188.ec2.internal",
            "private_ip": "172.31.81.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01771dc8ba8aedb9d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "launch-wizard-4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a0f2ac81",
            "tags": {
              "Name": "jobpay01"
            },
            "tags_all": {
              "Name": "jobpay01"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-09627a4b90bb62da5"
            ]
          },
          "dependencies": [
            "aws_vpc.vpc_9adfb3e7",
            "aws_security_group.sg_09627a4b90bb62da5",
            "aws_key_pair.tanamao",
            "aws_subnet.subnet_a0f2ac81"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_ee64b794",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281557493350:internet-gateway/igw-ee64b794",
            "id": "igw-ee64b794",
            "owner_id": "281557493350",
            "vpc_id": "vpc-9adfb3e7"
          },
          "dependencies": [
            "aws_vpc.vpc_9adfb3e7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_00965e59571dd40ce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281557493350:security-group/sg-00965e59571dd40ce",
            "description": "launch-wizard-2 created 2021-08-30T18:37:43.252-03:00",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00965e59571dd40ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "launch-wizard-2",
            "name_prefix": "",
            "owner_id": "281557493350",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-9adfb3e7"
          },
          "dependencies": [
            "aws_vpc.vpc_9adfb3e7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_035a011a0ac6b0dbd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281557493350:security-group/sg-035a011a0ac6b0dbd",
            "description": "launch-wizard-3 created 2021-08-30T18:40:50.146-03:00",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035a011a0ac6b0dbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "launch-wizard-3",
            "name_prefix": "",
            "owner_id": "281557493350",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-9adfb3e7"
          },
          "dependencies": [
            "aws_vpc.vpc_9adfb3e7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_072987e0c451e8cd1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281557493350:security-group/sg-072987e0c451e8cd1",
            "description": "launch-wizard-1 created 2021-08-30T18:33:21.442-03:00",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072987e0c451e8cd1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "launch-wizard-1",
            "name_prefix": "",
            "owner_id": "281557493350",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-9adfb3e7"
          },
          "dependencies": [
            "aws_vpc.vpc_9adfb3e7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_09627a4b90bb62da5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281557493350:security-group/sg-09627a4b90bb62da5",
            "description": "launch-wizard-4 created 2021-08-30T19:12:30.935-03:00",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09627a4b90bb62da5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6032,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6032
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "launch-wizard-4",
            "name_prefix": "",
            "owner_id": "281557493350",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-9adfb3e7"
          },
          "dependencies": [
            "aws_vpc.vpc_9adfb3e7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_afc2b3b2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281557493350:security-group/sg-afc2b3b2",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-afc2b3b2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "281557493350",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-9adfb3e7"
          },
          "dependencies": [
            "aws_vpc.vpc_9adfb3e7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_0838db44",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281557493350:subnet/subnet-0838db44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-0838db44",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "281557493350",
            "timeouts": {
            },
            "vpc_id": "vpc-9adfb3e7"
          },
          "dependencies": [
            "aws_vpc.vpc_9adfb3e7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_147a264b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281557493350:subnet/subnet-147a264b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-147a264b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "281557493350",
            "timeouts": {
            },
            "vpc_id": "vpc-9adfb3e7"
          },
          "dependencies": [
            "aws_vpc.vpc_9adfb3e7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a0f2ac81",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281557493350:subnet/subnet-a0f2ac81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "id": "subnet-a0f2ac81",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "281557493350",
            "timeouts": {
            },
            "vpc_id": "vpc-9adfb3e7"
          },
          "dependencies": [
            "aws_vpc.vpc_9adfb3e7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_ac7f2cca",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281557493350:subnet/subnet-ac7f2cca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-ac7f2cca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "281557493350",
            "timeouts": {
            },
            "vpc_id": "vpc-9adfb3e7"
          },
          "dependencies": [
            "aws_vpc.vpc_9adfb3e7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_d22530dc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281557493350:subnet/subnet-d22530dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.31.64.0/20",
            "id": "subnet-d22530dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "281557493350",
            "timeouts": {
            },
            "vpc_id": "vpc-9adfb3e7"
          },
          "dependencies": [
            "aws_vpc.vpc_9adfb3e7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_f391f6c2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281557493350:subnet/subnet-f391f6c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.31.48.0/20",
            "id": "subnet-f391f6c2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "281557493350",
            "timeouts": {
            },
            "vpc_id": "vpc-9adfb3e7"
          },
          "dependencies": [
            "aws_vpc.vpc_9adfb3e7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_9adfb3e7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:281557493350:vpc/vpc-9adfb3e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-96885eea",
            "default_route_table_id": "rtb-29fa1058",
            "default_security_group_id": "sg-afc2b3b2",
            "dhcp_options_id": "dopt-2cb0b956",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-9adfb3e7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-29fa1058",
            "owner_id": "281557493350"
          }
        }
      ]
    }
  ]
}